--- a/src/app/components/hunts/hunts.component.html
+++ b/src/app/components/hunts/hunts.component.html
@@ -6,19 +6,21 @@
       <tr>
         <th scope="col" class="px-6 py-3">WMA &amp; Season</th>
         <th scope="col" class="px-6 py-3 w-[200px]">Dates</th>
-        <th scope="col" class="px-6 py-3 w-[150px]">Results</th>
-        <th scope="col" class="px-6 py-3 w-[300px]">Weather</th>
+        <th scope="col" class="px-6 py-3 w-[150px] text-center">Results</th>
+        <th scope="col" class="px-6 py-3 w-[300px] text-center">Weather</th>
       </tr>
     </thead>
     <tbody>
       @if ((hunts$ | async); as hunts) {
         @for (hunt of hunts; track hunt.id) {
-          <tr class="border-b bg-gray-800 border-gray-600">
+          <tr class="border-b bg-gray-800 border-gray-500">
             <td class="px-6 py-4 align-top bg-gray-800">
               <div class="flex flex-wrap items-center mb-1">
-                <a href="https://www.google.com/maps/search/?api=1&query={{ hunt.coords }}" target="_blank">
-                  <ng-icon name="heroMapPin" class="mr-1"></ng-icon>
-                </a>
+                @if (hunt.physLat && hunt.physLong) {
+                  <a href="https://www.google.com/maps/search/?api=1&query={{ hunt.physLat }},{{ hunt.physLong }}" target="_blank">
+                    <ng-icon name="heroMapPin" class="mr-1"></ng-icon>
+                  </a>
+                }
                 <div class="text-white font-bold uppercase mr-1">
                   {{ hunt.wmaName }}
                 </div>
@@ -65,25 +67,29 @@
                 <span class="mx-1">{{ hunt.endDate | date: 'MM/dd/yyy' }}</span>
               </div>
             </td>
-            <td class="px-6 py-4 align-top bg-gray-800">
-              <div>
-                <span class="uppercase text-xs font-semibold text-gray-400">Hunters:</span>
-                <span class="mx-1">{{ hunt.hunterCount }}</span>
-              </div>
-              <div>
-                <span class="uppercase text-xs font-semibold text-gray-400">Bucks:</span>
-                <span class="mx-1">{{ hunt.bucks }}</span>
-              </div>
-              <div>
-                <span class="uppercase text-xs font-semibold text-gray-400">Does:</span>
-                <span class="mx-1">{{ hunt.does }}</span>
-              </div>
-              <div class="font-semibold text-white uppercase text-xs">
-                Success Rate:
-              </div>
-              <div class="{{ hunt | successRateColor }} font-bold">
-                {{ hunt | successRate }}&percnt;
-              </div>
+            <td class="px-6 align-top bg-gray-900">
+              <table class="w-full mt-1 mb-1">
+                <tr>
+                  <td class="px-2 uppercase text-xs font-semibold text-right text-gray-400 border-r border-gray-600">Hunters</td>
+                  <td class="px-2">{{ hunt.hunterCount }}</td>
+                </tr>
+                <tr>
+                  <td class="px-2 uppercase text-xs font-semibold text-right text-gray-400 border-r border-gray-600">Bucks</td>
+                  <td class="px-2">{{ hunt.bucks }}</td>
+                </tr>
+                <tr>
+                  <td class="px-2 uppercase text-xs font-semibold text-right text-gray-400 border-r border-gray-600">Does</td>
+                  <td class="px-2">{{ hunt.does }}</td>
+                </tr>
+                <tr class="border-t border-gray-600">
+                  <td colspan="2" class="px-2 uppercase text-xs font-semibold text-gray-400 text-center whitespace-nowrap">Success Rate</td>
+                </tr>
+                <tr>
+                  <td colspan="2" class="px-2 {{ hunt | successRateColor }} font-bold text-center text-sm">
+                    {{ hunt | successRate }}&percnt;
+                  </td>
+                </tr>
+              </table>
             </td>
             <td class="px-6 py-4 align-top border-l border-gray-600">
               hunt.id: <a href="javascript:;" (click)="openHuntForm(hunt)">{{ hunt.id }}</a>
@@ -146,9 +152,6 @@
                     </span>
                   }
                 }
-              </div>
-              <div class="mt-1 text-xs" [innerHTML]="hunt.details | detailsHighlight"></div>
-              <div class="flex items-center text-xs">
                 <span class="text-xs font-medium me-2 px-2.5 py-0.5 rounded-full bg-blue-900 text-blue-300">
                   {{ hunt.startDate | date: 'MM/dd/yyyy' }} - {{ hunt.endDate | date: 'MM/dd/yyyy' }}
                 </span>
@@ -158,28 +161,33 @@
                   </span>
                 }
               </div>
+              <div class="mt-1 text-xs" [innerHTML]="hunt.details | detailsHighlight"></div>
             </td>
           </tr>
           <tr class="bg-gray-800 border-b border-gray-600">
-            <td class="text-xs px-2 pb-2 align-top max-w-16">
-              <div class="flex items-center">
-                <div class="uppercase text-gray-400 font-semibold text-xs">Hunters:</div>
-                <div class="mx-1">{{ hunt.hunterCount }}</div>
-              </div>
-              <div class="flex items-center">
-                <div class="uppercase text-gray-400 font-semibold text-xs">Bucks:</div>
-                <div class="mx-1">{{ hunt.bucks }}</div>
-              </div>
-              <div class="flex items-center">
-                <div class="uppercase text-gray-400 font-semibold text-xs">Does:</div>
-                <div class="mx-1">{{ hunt.does }}</div>
-              </div>
-              <div class="font-bold text-white uppercase text-xs">
-                Success Rate:
-              </div>
-              <div class="{{ hunt | successRateColor }} font-bold">
-                {{ hunt | successRate }}&percnt;
-              </div>
+            <td class="text-xs px-2 pb-2 align-top max-w-16 bg-gray-900">
+              <table class="w-full mt-1 mb-1">
+                <tr>
+                  <td class="px-2 w-1/2 uppercase text-xs font-semibold text-right text-gray-400 border-r border-gray-600">Hunters</td>
+                  <td class="px-2 w-1/2">{{ hunt.hunterCount }}</td>
+                </tr>
+                <tr>
+                  <td class="px-2 w-1/2 uppercase text-xs font-semibold text-right text-gray-400 border-r border-gray-600">Bucks</td>
+                  <td class="px-2 w-1/2">{{ hunt.bucks }}</td>
+                </tr>
+                <tr>
+                  <td class="px-2 w-1/2 uppercase text-xs font-semibold text-right text-gray-400 border-r border-gray-600">Does</td>
+                  <td class="px-2 w-1/2">{{ hunt.does }}</td>
+                </tr>
+                <tr class="border-t border-gray-600">
+                  <td colspan="2" class="px-2 uppercase text-xs font-semibold text-gray-400 text-center whitespace-nowrap">Success Rate</td>
+                </tr>
+                <tr>
+                  <td colspan="2" class="px-2 {{ hunt | successRateColor }} font-bold text-center text-sm">
+                    {{ hunt | successRate }}&percnt;
+                  </td>
+                </tr>
+              </table>
             </td>
             <td class="px-2 border-t border-l border-gray-600 align-top">
                hunt.id: {{ hunt.id }}
@@ -207,7 +215,7 @@
   <div class="w-[99%] md:w-[85%] flex justify-center mt-1 mb-12">
     <div class="flex items-center text-gawmas-yeller text-sm">
       <ng-icon name="heroCheckCircle" class="mr-1"></ng-icon>
-      <span class="italic">End of results</span>
+      <span class="italic uppercase">End of results</span>
     </div>
   </div>
 }
