--- a/src/styles.scss
+++ b/src/styles.scss
@@ -54,6 +54,75 @@ body {
   @apply text-white font-semibold;
 }
 
+button.btn {
+  @apply
+    mr-1.5
+    relative
+    inline-flex
+    items-center
+    px-5 py-2.5
+    text-sm
+    font-medium
+    text-center
+    rounded-full
+    focus:ring-4
+    focus:outline-none;
+
+  &-primary {
+    @apply
+      text-white
+      bg-blue-600
+      hover:bg-blue-500
+      focus:ring-blue-300;
+  }
+
+  &-default {
+    @apply
+      bg-gray-300
+      hover:bg-gray-200
+      text-gray-700;
+  }
+
+  &-danger {
+    @apply
+      bg-red-600
+      hover:bg-red-500
+      disabled:bg-red-300
+      disabled:text-gray-400
+      text-gray-100;
+  }
+}
+
+.count-badge {
+  @apply
+    absolute
+    inline-flex
+    items-center
+    justify-center
+    w-6 h-6
+    text-xs
+    font-bold
+    text-white
+    bg-red-500 border-2
+    border-white
+    rounded-full
+    -top-2 -end-2
+    dark:border-gray-900;
+}
+
+.select {
+  @apply
+    block
+    py-3 px-5
+    text-xs
+    border
+    rounded-full
+    bg-gray-700 border-gray-600
+    placeholder-gray-400
+    text-white
+    focus:ring-blue-500 focus:border-blue-500;
+}
+
 .scroll-container {
   max-width: 100%; /* Set the maximum width as needed */
   overflow-x: auto; /* Enable horizontal scrolling */
