--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -18,7 +18,7 @@
       class="flex flex-col font-medium mt-4 rounded-lg bg-gray-800 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-transparent">
       <li class="flex items-center text-sm py-2 px-2">
         <ng-icon name="heroTableCells" class="text-lg text-white mr-1"></ng-icon>
-        <a href="#" class="block  md:p-0 text-white md:bg-transparent border-b-2 border-gawmas-yeller"
+        <a routerLink="/browse" class="block  md:p-0 text-white md:bg-transparent border-b-2 border-gawmas-yeller"
           aria-current="page">
           Browse Hunt Results
         </a>
