Implemented historical avg temps

--- a/src/app/components/filters/filters.component.html
+++ b/src/app/components/filters/filters.component.html
@@ -14,8 +14,8 @@
 
   <form [formGroup]="sortForm" class="mr-1.5">
     <select formControlName="sort" class="select">
-      <option class="underline">Sort Results</option>
-      <option value="">WMA Name, Date</option>
+      <option>[Sort Results]</option>
+      <option value="">WMA Name &amp; Season</option>
       <option value="success">Success Rate</option>
       <option value="hunters">Hunter Count</option>
     </select>
