More work on wma form.

--- a/src/app/components/hunts/hunts.component.html
+++ b/src/app/components/hunts/hunts.component.html
@@ -108,6 +108,9 @@
                   </div>
                 </div>
               }
+              <div class="w-full text-xs text-gray-400 border-t border-gray-600 pt-1 pl-2 mr-1 flex items-center">
+                &#64; {{ hunt.climateTown }}, GA
+              </div>
             </td>
           </tr>
         } @empty {
