--- a/src/app/components/admin/wma-form/wmaForm.component.html
+++ b/src/app/components/admin/wma-form/wmaForm.component.html
@@ -1,5 +1,5 @@
 <gawmas-modal #wmaForm [targetElement]="wmaFormTarget">
-  <form [formGroup]="wmaFormGroup">
+  <form [formGroup]="wmaFormGroup" (submit)="updateWma()">
     <div class="flex items-start justify-between rounded-t border-b p-5 dark:border-gray-600">
       <h3 class="text-xl font-semibold text-white lg:text-2xl">
         Update WMA
@@ -56,7 +56,7 @@
             <input tabindex="7" id="physLong" formControlName="physLong" type="text" class="w-full rounded-md text-gray-200 bg-gray-600" />
           </div>
         </div>
-        @if (wmaFormGroup.controls['physLat'].value || wmaFormGroup.controls['physLong'].value) {
+        @if (coordsProvided) {
           <div class="w-full h-[35vh]">
             <!-- <span class="text-white">{{ wmaCoords | json }}</span> -->
             <gawmas-climate-locations-map #climateLocationsMap [coords]="(climateCoords$ | async)!" [wmaCoords]="wmaCoords" />
