--- a/src/app/components/filters/filters.component.html
+++ b/src/app/components/filters/filters.component.html
@@ -1,20 +1,30 @@
 <div class="flex px-2 py-2 mb-0 scroll-container z-10">
 
-  <button (click)="openFiltersDrawer()" type="button"
-    class="btn btn-primary">
-    <ng-icon name="heroAdjustmentsHorizontal" class="mr-1 text-lg"></ng-icon>
-    <span class="sr-only">Applied Filter Count</span>
-    Filters
-    @if (filterCount() > 0) {
-      <div class="count-badge">
-        {{ filterCount() }}
-      </div>
-    }
-  </button>
+  @if (isLoading$ | async) {
+    <button disabled type="button" class="btn btn-loading">
+      <svg aria-hidden="true" role="status" class="inline w-4 h-4 mr-2 animate-spin text-gray-600" viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z" fill="currentColor"/>
+        <path d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z" fill="#1C64F2"/>
+      </svg>
+      Loading...
+    </button>
+  } @else {
+    <button (click)="openFiltersDrawer()" type="button"
+      class="btn btn-primary animate-jump-in animate-delay-100 animate-once">
+      <ng-icon name="heroAdjustmentsHorizontal" class="mr-1 text-lg"></ng-icon>
+      <span class="sr-only">Applied Filter Count</span>
+      Filters
+      @if (filterCount() > 0) {
+        <div class="count-badge">
+          {{ filterCount() }}
+        </div>
+      }
+    </button>
+  }
 
   <form [formGroup]="sortForm" class="mr-1.5">
     <select formControlName="sort" class="select">
-      <option>[Sort Results]</option>
+      <option disabled>[Sort Results]</option>
       <option value="">WMA Name &amp; Season</option>
       <option value="success">Success Rate</option>
       <option value="hunters">Hunter Count</option>
@@ -37,6 +47,54 @@
           <div id="successRate" role="tooltip"
             class="absolute z-10 invisible inline-block px-3 py-2 text-xs font-medium text-gray-300 transition-opacity duration-300 bg-gray-900 rounded-full shadow-sm opacity-0 tooltip">
             Remove <span class="italic">'Success rate &gt; {{ filters.successRate }}'</span> from filters.
+            <div class="tooltip-arrow" data-popper-arrow></div>
+          </div>
+        </div>
+      </span>
+    }
+
+    @if (filters.isBonusQuota) {
+      <span class="hidden md:inline-flex mr-1.5 whitespace-nowrap bg-red-900 text-red-300 text-xs font-medium items-center px-2.5 py-0.5 rounded-full border border-gray-500">
+        Quota/Bonus
+        <div (mouseover)="showRemoveFilterTooltip('quotaBonus', 'hover', $event)" class="pt-1 inline-flex items-center">
+          <a class="cursor-pointer hover:text-white" (click)="removeWmaTypeFilter('bonusQuota')">
+            <ng-icon name="heroXMark" class="text-xl font-extrabold"></ng-icon>
+          </a>
+          <div id="quotaBonus" role="tooltip"
+            class="absolute z-10 invisible inline-block px-3 py-2 text-xs font-medium text-gray-300 transition-opacity duration-300 bg-gray-900 rounded-full shadow-sm opacity-0 tooltip">
+            Remove <span class="italic">'Quota/Bonus'</span> from filters.
+            <div class="tooltip-arrow" data-popper-arrow></div>
+          </div>
+        </div>
+      </span>
+    }
+
+    @if (filters.isStatePark) {
+      <span class="hidden md:inline-flex mr-1.5 whitespace-nowrap bg-gray-300 text-gray-800 text-xs font-medium items-center px-2.5 py-0.5 rounded-full border border-gray-500">
+        State Park
+        <div (mouseover)="showRemoveFilterTooltip('statePark', 'hover', $event)" class="pt-1 inline-flex items-center">
+          <a class="cursor-pointer hover:text-white" (click)="removeWmaTypeFilter('statePark')">
+            <ng-icon name="heroXMark" class="text-xl font-extrabold"></ng-icon>
+          </a>
+          <div id="statePark" role="tooltip"
+            class="absolute z-10 invisible inline-block px-3 py-2 text-xs font-medium text-gray-300 transition-opacity duration-300 bg-gray-900 rounded-full shadow-sm opacity-0 tooltip">
+            Remove <span class="italic">'State Park'</span> from filters.
+            <div class="tooltip-arrow" data-popper-arrow></div>
+          </div>
+        </div>
+      </span>
+    }
+
+    @if (filters.isVpa) {
+      <span class="hidden md:inline-flex mr-1.5 whitespace-nowrap bg-gray-300 text-gray-800 text-xs font-medium items-center px-2.5 py-0.5 rounded-full border border-gray-500">
+        VPA
+        <div (mouseover)="showRemoveFilterTooltip('vpa', 'hover', $event)" class="pt-1 inline-flex items-center">
+          <a class="cursor-pointer hover:text-white" (click)="removeWmaTypeFilter('vpa')">
+            <ng-icon name="heroXMark" class="text-xl font-extrabold"></ng-icon>
+          </a>
+          <div id="vpa" role="tooltip"
+            class="absolute z-10 invisible inline-block px-3 py-2 text-xs font-medium text-gray-300 transition-opacity duration-300 bg-gray-900 rounded-full shadow-sm opacity-0 tooltip">
+            Remove <span class="italic">'VPA'</span> from filters.
             <div class="tooltip-arrow" data-popper-arrow></div>
           </div>
         </div>
@@ -139,7 +197,7 @@
         </div>
         <div class="grid grid-cols-1">
           <label class="relative inline-flex items-center cursor-pointer">
-            <input type="checkbox" value="" class="sr-only peer">
+            <input formControlName="isBonusQuota" type="checkbox" value="" class="sr-only peer">
             <div class="toggle peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-blue-300 rounded-full peer peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white"></div>
             <span class="ms-2 text-sm font-medium text-gray-300">Quota/Bonus Hunt</span>
           </label>
