--- a/src/app/components/hunts/hunts.component.html
+++ b/src/app/components/hunts/hunts.component.html
@@ -1,5 +1,9 @@
 <gawmas-hunt-filters />
 
+@if (isLoading$ | async) {
+  <gawmas-loading />
+}
+
 <table class="w-[95%] text-sm text-left text-gray-300 -pt-2">
   @if (screenWidth() > 1000) {
     <thead class="text-xs text-gray-400 uppercase bg-gray-800 border-gray-400 border-b-2 border-t-1">
@@ -62,7 +66,7 @@
               }
               <div class="mt-1 text-xs" [innerHTML]="hunt.details | detailsHighlight"></div>
             </td>
-            <td class="px-6 py-4 align-top bg-gray-800">
+            <td class="px-5 py-4 align-top bg-gray-800">
               @for (date of hunt.huntDates; track date) {
                 <div class="mx-1">
                   {{ date.start | date: 'MMM d' }} &ndash; {{ date.end | date: 'MMM d' }}
@@ -73,7 +77,17 @@
               <table class="w-full mt-1 mb-1">
                 <tr>
                   <td class="px-2 uppercase text-xs font-semibold text-right text-gray-400 border-r border-gray-600">Hunters</td>
-                  <td class="px-2">{{ hunt.hunterCount }}</td>
+                  <td class="px-2 flex items-center">
+                      <div>{{ hunt.hunterCount }}</div>
+                      @if (hunt.hunterDensity && hunt.hunterDensity <= 50) {
+                        <ng-icon (mouseover)="showHunterDensityTooltip(hunt.id.toString(), 'hover', $event)" name="heroExclamationTriangle" class="ml-1"></ng-icon>
+                        <div id="{{ hunt.id }}" role="tooltip"
+                          class="absolute z-10 invisible inline-block px-3 py-2 text-xs font-medium text-gray-800 transition-opacity duration-300 bg-gray-300 rounded-full shadow-sm opacity-0 tooltip">
+                            High hunter density: 1 hunter for every ~{{ hunt.hunterDensity }} acres
+                          <div class="tooltip-arrow" data-popper-arrow></div>
+                        </div>
+                      }
+                  </td>
                 </tr>
                 <tr>
                   <td class="px-2 uppercase text-xs font-semibold text-right text-gray-400 border-r border-gray-600">Bucks</td>
@@ -114,10 +128,10 @@
             </td>
           </tr>
         } @empty {
-          <!-- @if () { -->
-            <tr class="bg-gray-800 border-b border-gray-700">
-              <td colspan="4" class="px-8 py-8 text-gawmas-yeller">
-                <div class="flex justify-center">
+          <tr class="bg-gray-800 border-b border-gray-700">
+            <td colspan="4" class="px-8 py-8 text-gawmas-yeller">
+              <div class="flex justify-center">
+                @if (!(isLoading$ | async)) {
                   <div class="mt-2 flex items-center italic">
                     <ng-icon name="heroFaceFrown" class="mr-1"></ng-icon>
                     <span class="sr-only">Sad face icon</span>
@@ -125,10 +139,10 @@
                       <span class="font-medium">No results found</span>.
                     </div>
                   </div>
-                </div>
-              </td>
-            </tr>
-          <!-- } -->
+                }
+              </div>
+            </td>
+          </tr>
         }
       }
     </tbody>
@@ -216,7 +230,7 @@
               </table>
             </td>
             <td class="px-2 border-t border-l border-gray-600 align-top">
-               hunt.id: {{ hunt.id }}
+              hunt.id: {{ hunt.id }}
             </td>
           </tr>
         } @empty {
@@ -245,5 +259,6 @@
     </div>
   </div>
 }
+
 
 
