--- a/src/app/components/filters/filters.component.html
+++ b/src/app/components/filters/filters.component.html
@@ -31,14 +31,14 @@
     </select>
   </form>
 
-  <!-- {{ filterForm.value | json }} -->
+  <!-- <span class="text-white">{{ filterForm.value | json }}</span> -->
 
   @if ((filter$ | async); as filters) {
 
     <!-- <span class="text-white">{{ filters | json }}</span> -->
 
     @if (filters.successRate! > 0) {
-      <span class="hidden md:inline-flex mr-1.5 whitespace-nowrap bg-green-500 text-gray-200 text-xs font-medium items-center px-2.5 py-0.5 rounded-full border border-gray-500">
+      <span class="hidden md:inline-flex mr-1.5 whitespace-nowrap bg-green-500 text-gray-200 text-xs font-medium items-center px-2.5 py-0.5 rounded-full border border-gray-200">
         Success Rate &gt; {{ filters.successRate }}&percnt;
         <div (mouseover)="showRemoveFilterTooltip('successRate', 'hover', $event)" class="pt-1 inline-flex items-center">
           <a class="cursor-pointer hover:text-white" (click)="removeSuccessRate()">
@@ -101,55 +101,58 @@
       </span>
     }
 
-    @for (wmaId of filters.wmas; track wmaId) {
-      <span class="hidden md:inline-flex mr-1.5 whitespace-nowrap bg-gray-300 text-gray-800 text-xs font-medium items-center px-2.5 py-0.5 rounded-full border border-gray-500 ">
-        {{ wmaId | filterObjName: auxData.wmas }}
-        <div (mouseover)="showRemoveFilterTooltip(wmaId.toString(), 'hover', $event)" class="pt-1 inline-flex items-center">
-          <a class="cursor-pointer hover:text-cyan-800" (click)="removeCheckboxFilter(wmaId, 'wmas')">
-            <ng-icon name="heroXMark" class="text-xl font-extrabold"></ng-icon>
-          </a>
-          <div id="{{ wmaId }}" role="tooltip"
-            class="absolute z-10 invisible inline-block px-3 py-2 text-xs font-medium text-gray-300 transition-opacity duration-300 bg-gray-900 rounded-full shadow-sm opacity-0 tooltip">
-            Remove  <span class="italic">'{{ wmaId | filterObjName: auxData.wmas }}'</span> from filters.
-            <div class="tooltip-arrow" data-popper-arrow></div>
-          </div>
-        </div>
-      </span>
-    }
+    @if (auxData$ | async; as anxData) {
 
-    @for (seasonId of filters.seasons; track seasonId) {
-      <span class="hidden md:inline-flex mr-1.5 whitespace-nowrap bg-gray-300 text-gray-800 text-xs font-medium items-center px-2.5 py-0.5 rounded-full border border-gray-500 ">
-        {{ seasonId | filterObjName: auxData.seasons }}
-        <div (mouseover)="showRemoveFilterTooltip(seasonId.toString(), 'hover', $event)" class="pt-1 inline-flex items-center">
-          <a class="cursor-pointer hover:text-cyan-800" (click)="removeCheckboxFilter(seasonId, 'seasons')">
-            <ng-icon name="heroXMark" class="text-xl font-extrabold"></ng-icon>
-          </a>
-          <div id="{{ seasonId }}" role="tooltip"
-            class="absolute z-10 invisible inline-block px-3 py-2 text-xs font-medium text-gray-300 transition-opacity duration-300 bg-gray-900 rounded-full shadow-sm opacity-0 tooltip">
-            Remove <span class="italic">'{{ seasonId | filterObjName: auxData.seasons }}'</span> filters.
-            <div class="tooltip-arrow" data-popper-arrow></div>
+      @for (wmaId of filters.wmas; track wmaId) {
+        <span class="hidden md:inline-flex mr-1.5 whitespace-nowrap bg-gray-300 text-gray-800 text-xs font-medium items-center px-2.5 py-0.5 rounded-full border border-gray-500 ">
+          {{ wmaId | filterObjName: anxData.wmas }}
+          <div (mouseover)="showRemoveFilterTooltip(wmaId.toString(), 'hover', $event)" class="pt-1 inline-flex items-center">
+            <a class="cursor-pointer hover:text-cyan-800" (click)="removeCheckboxFilter(wmaId, 'wmas')">
+              <ng-icon name="heroXMark" class="text-xl font-extrabold"></ng-icon>
+            </a>
+            <div id="{{ wmaId }}" role="tooltip"
+              class="absolute z-10 invisible inline-block px-3 py-2 text-xs font-medium text-gray-300 transition-opacity duration-300 bg-gray-900 rounded-full shadow-sm opacity-0 tooltip">
+                Remove  <span class="italic">'{{ wmaId | filterObjName: anxData.wmas }}'</span> from filters.
+                <div class="tooltip-arrow" data-popper-arrow></div>
+            </div>
           </div>
-        </div>
-      </span>
-    }
+        </span>
+      }
 
-    @for (weaponId of filters.weapons; track weaponId) {
-      <span class="hidden md:inline-flex mr-1.5 whitespace-nowrap bg-gray-300 text-gray-800 text-xs font-medium items-center px-2.5 py-0.5 rounded-full border border-gray-500 ">
-        {{ weaponId | filterObjName: auxData.weapons }}
-        <div (mouseover)="showRemoveFilterTooltip(weaponId.toString(), 'hover', $event)" class="pt-1 inline-flex items-center">
-          <a class="cursor-pointer hover:text-cyan-800" (click)="removeCheckboxFilter(weaponId, 'weapons')">
-            <ng-icon name="heroXMark" class="text-xl font-extrabold"></ng-icon>
-          </a>
-          <div id="{{ weaponId }}" role="tooltip"
-            class="absolute z-10 invisible inline-block px-3 py-2 text-xs font-medium text-gray-300 transition-opacity duration-300 bg-gray-900 rounded-full shadow-sm opacity-0 tooltip">
-            Remove <span class="italic">'{{ weaponId | filterObjName: auxData.weapons }}'</span> from filters.
-            <div class="tooltip-arrow" data-popper-arrow></div>
+      @for (seasonId of filters.seasons; track seasonId) {
+        <span class="hidden md:inline-flex mr-1.5 whitespace-nowrap bg-gray-300 text-gray-800 text-xs font-medium items-center px-2.5 py-0.5 rounded-full border border-gray-500 ">
+          {{ seasonId | filterObjName: anxData.seasons }}
+          <div (mouseover)="showRemoveFilterTooltip(seasonId.toString(), 'hover', $event)" class="pt-1 inline-flex items-center">
+            <a class="cursor-pointer hover:text-cyan-800" (click)="removeCheckboxFilter(seasonId, 'seasons')">
+              <ng-icon name="heroXMark" class="text-xl font-extrabold"></ng-icon>
+            </a>
+              <div id="{{ seasonId }}" role="tooltip"
+                class="absolute z-10 invisible inline-block px-3 py-2 text-xs font-medium text-gray-300 transition-opacity duration-300 bg-gray-900 rounded-full shadow-sm opacity-0 tooltip">
+              Remove <span class="italic">'{{ seasonId | filterObjName: anxData.seasons }}'</span> filters.
+              <div class="tooltip-arrow" data-popper-arrow></div>
+            </div>
           </div>
-        </div>
-      </span>
-    }
+        </span>
+      }
 
-  }
+      @for (weaponId of filters.weapons; track weaponId) {
+        <span class="hidden md:inline-flex mr-1.5 whitespace-nowrap bg-gray-300 text-gray-800 text-xs font-medium items-center px-2.5 py-0.5 rounded-full border border-gray-500 ">
+          {{ weaponId | filterObjName: anxData.weapons }}
+          <div (mouseover)="showRemoveFilterTooltip(weaponId.toString(), 'hover', $event)" class="pt-1 inline-flex items-center">
+            <a class="cursor-pointer hover:text-cyan-800" (click)="removeCheckboxFilter(weaponId, 'weapons')">
+              <ng-icon name="heroXMark" class="text-xl font-extrabold"></ng-icon>
+            </a>
+            <div id="{{ weaponId }}" role="tooltip"
+              class="absolute z-10 invisible inline-block px-3 py-2 text-xs font-medium text-gray-300 transition-opacity duration-300 bg-gray-900 rounded-full shadow-sm opacity-0 tooltip">
+              Remove <span class="italic">'{{ weaponId | filterObjName: anxData.weapons }}'</span> from filters.
+              <div class="tooltip-arrow" data-popper-arrow></div>
+            </div>
+          </div>
+        </span>
+      }
+
+    }
+}
 
 </div>
 
