Starting on weather column results.

--- a/src/app/components/filters/filters.component.html
+++ b/src/app/components/filters/filters.component.html
@@ -320,8 +320,8 @@
         <div class="flex items-center mb-2 ml-2">
           <input id="warmer" type="radio" name="default-radio"
             class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 focus:ring-2">
-          <div class="ml-1">
-            <ng-icon name="heroArrowUp" class="font-extrabold text-red-500"></ng-icon>
+          <div class="mx-1">
+            <ng-icon name="heroChevronDoubleUp" class="font-extrabold text-red-500"></ng-icon>
           </div>
           <label for="warmer" class="text-sm font-medium text-gray-300">
             Warmer than average
@@ -330,8 +330,8 @@
         <div class="flex items-center ml-2 mb-2">
           <input id="cooler" type="radio" name="default-radio"
             class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 focus:ring-2">
-          <div class="ml-1">
-            <ng-icon name="heroArrowDown" class="font-extrabold text-blue-500"></ng-icon>
+          <div class="mx-1">
+            <ng-icon name="heroChevronDoubleDown" class="font-extrabold text-blue-500"></ng-icon>
           </div>
           <label for="cooler" class="text-sm font-medium text-gray-300">
             Cooler than average
